--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,7 +8,7 @@
         width: 28.3333%;
     }
 
-    #list li:nth-child(4n) {
+    #list li:nth-child(3n) {
         clear: left;
     }
 
@@ -18,8 +18,8 @@
     ***********************************/
 
     #logo {
-        margin-left: 45%;
-        width: 45%
+        display: block;
+        margin: auto;
     }
 
     h1 {
