--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,8 @@ header {
 }
 
 #logo {
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
+	display: block;
+	margin: auto;
 	text-align: center;
 }
 
@@ -79,7 +78,7 @@ PAGE: MAIN
 
 input#searchTerm {
 	display: block;
-	margin: 0;
+	margin: auto;
 	width: 50%;
 	font-family: sans-serif;
 	font-size: 18px;
@@ -104,16 +103,18 @@ input#searchTerm.focus {
 }
 
 #button {
+	display: block;
+	margin: 20px auto;
 	/*border: 5px solid #465468;*/
 	border: none;
 	-webkit-border-radius: 4;
 	-moz-border-radius: 4;
 	border-radius: 4px;
-	font-family: Arial;
 	color: #ffffff;
+	font-family: "Lucida Grande", sans-serif;
 	font-size: 20px;
 	background: #7890a5;
-	padding: 20px 30px 20px 30px;
+	padding: 20px 25px 20px 25px;
 	text-decoration: none;
 }
 
