changed logo font
reverted to courier from courier new

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ header {
 }
 
 h1 {
-	font-family: "Courier New", serif;
+	font-family: "Courier", serif;
 	margin: 15px 0;
 	font-size: 1.75em;
 	font-weight: normal;
