--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,12 @@ h2 {
 	font-weight: normal;
 }
 
+header p {
+	font-family: "Courier"; 
+	color:white; 
+	font-style:italic;
+}
+
 
 /**********************************
 FOOTER
@@ -80,7 +86,7 @@ input#searchTerm {
 	display: block;
 	margin: auto;
 	width: 50%;
-	font-family: sans-serif;
+	font-family: "Lucida Grande", sans-serif;
 	font-size: 18px;
 	appearance: none;
 	box-shadow: none;
@@ -120,6 +126,17 @@ input#searchTerm.focus {
 #button:hover {
 	background: #465468;
 	text-decoration: none;
+}
+
+#instructions {
+	display: block;
+	text-align: center;
+	margin: 50px auto;
+	width: 50%;
+	font-family: "Lucida Grande", sans-serif;
+	font-size: 12px;
+	color: #465468;
+	line-height: 1.5em;
 }
 
 #list {
