--- a/css/style.css
+++ b/css/style.css
@@ -98,9 +98,12 @@ input#searchTerm:focus {
 }
 
 input#searchTerm  {
+	clear: left;
 	padding: 10px;
 	border: 5px solid #c9c9c9;
 	transition: border 0.3s;
+	-moz-transition: border 0.3s;
+	-webkit-transition: border 0.3s;
 }
 
 input#searchTerm:focus,
